--- a/public/styles/_burger.scss
+++ b/public/styles/_burger.scss
@@ -1,10 +1,10 @@
- 
+@import './utilities';
+
 .burgerek{
-    background-color: #000000;
-    transition: all .4s linear;
+    background-color: $base-color;
+    transition: all .5s linear;
     min-width : 100%;
-    height: 100vh;
-        height: calc(var(--vh, 1vh) * 100);
+    height: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,6 +12,7 @@
     padding:0;
     margin:0;
     z-index: 99;
+    border-bottom: black 2px solid;
         li{  
             display:flex;
             justify-content: center;
@@ -26,8 +27,8 @@
 
 .display_off{
     position: fixed;
-    left: -100%;
-    top: 0;
+    left: 0;
+    top: -100%;
 }
 
 .display_in{
