--- a/public/styles/_offers.scss
+++ b/public/styles/_offers.scss
@@ -19,6 +19,7 @@
             grid-gap: 2em;
             width: 100%;
             max-width: 100%;
+            position: relative;
                 & div {
                     border: black 2px solid;
                         & span {
@@ -78,9 +79,41 @@
                                 }
                         }
                 }
+
+                & .spinner{
+                    min-height: 100%;
+                    min-width: 100%;
+                    @include display-flex(row, center);
+                    position: absolute;
+                        & span {
+                                border: 5px solid #f3f3f3;
+                                border-radius: 50%;
+                                border-top: 5px solid $base-color;
+                                width: 90px;
+                                height: 90px;
+                                -webkit-animation: spin 2s linear infinite;
+                                animation: spin 2s linear infinite;
+                        }
+                    }
+
         }
 
 }
+
+.message_buton_wrapper{
+    position: fixed;
+    opacity: 0;
+    transition: all 300ms linear;
+    left: 20px;
+    bottom: 2em;
+    right: 2em;
+    transform: translateY(30px);
+}
+.message_buton_wrapper.visible{
+      opacity: 1;
+      transform: translateY(0);
+  }
+
 
 .ornament{
     position: fixed;
