--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -5,11 +5,13 @@ body, html {
   font-size: 16px;
   min-height: 100%;
   position: relative;
+  scroll-behavior: smooth;
 }
 
 #root {
   min-height: 100%;
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 .home_container {
@@ -31,6 +33,7 @@ body, html {
 .App {
   min-width: 100%;
   margin-top: 6em;
+  scroll-behavior: smooth;
 }
 
 .menu {
@@ -118,12 +121,11 @@ body, html {
 }
 
 .menu .burgerek {
-  background-color: #000000;
-  -webkit-transition: all .4s linear;
-  transition: all .4s linear;
+  background-color: #EEBB39;
+  -webkit-transition: all .5s linear;
+  transition: all .5s linear;
   min-width: 100%;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+  height: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -140,6 +142,7 @@ body, html {
   padding: 0;
   margin: 0;
   z-index: 99;
+  border-bottom: black 2px solid;
 }
 
 .menu .burgerek li {
@@ -162,8 +165,8 @@ body, html {
 
 .menu .display_off {
   position: fixed;
-  left: -100%;
-  top: 0;
+  left: 0;
+  top: -100%;
 }
 
 .menu .display_in {
@@ -911,6 +914,7 @@ body, html {
   grid-gap: 2em;
   width: 100%;
   max-width: 100%;
+  position: relative;
 }
 
 .offers_container .offers div {
@@ -1029,6 +1033,53 @@ body, html {
   .offers_container .offers div .product_name_price p:nth-child(2) {
     font-size: 1rem;
   }
+}
+
+.offers_container .offers .spinner {
+  min-height: 100%;
+  min-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: absolute;
+}
+
+.offers_container .offers .spinner span {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #EEBB39;
+  width: 90px;
+  height: 90px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+.message_buton_wrapper {
+  position: fixed;
+  opacity: 0;
+  -webkit-transition: all 300ms linear;
+  transition: all 300ms linear;
+  left: 20px;
+  bottom: 2em;
+  right: 2em;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+}
+
+.message_buton_wrapper.visible {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .ornament {
