--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -9,11 +9,13 @@ body, html{
     font-size: 16px;
     min-height: 100%;
     position: relative;
+    scroll-behavior: smooth;
 }
 
 #root{
     min-height: 100%;
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 .home_container{
@@ -28,6 +30,7 @@ body, html{
 .App{
     min-width: 100%;
     margin-top: 6em;
+    scroll-behavior: smooth;
 }
 
 .menu{  
